# gpve

./: README.md  pyproject.toml  requirements.txt
gpve/: __init__.py  cli.py  config.py  engine.py  examples.py  visualize.py  visualize_matplotlib.py
gpve/ai/: __init__.py  base.py  orchestrator.py
gpve/category/: __init__.py  higher_morphisms.py  morphisms.py
gpve/core/: __init__.py  functional_analysis.py  proof_graph.py  proof_kernel.py  reverse_eng.py  smt_solver.py
gpve/geometric/: __init__.py  homotopy.py  simplicial_complex.py  topological_proof.py
gpve/sheaf/: __init__.py  gluing.py  sheaf_structure.py
tests/: test_core.py  test_geometric.py  test_modules.py
